--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page Education</title>
+    <!-- archivo de estilos: -->
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="normalize.css">
+    <!-- favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+
 </head>
 <body>
-    
+    <h1>espacio para el titulo aqui</h1>
 </body>
 </html>
