--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -10,9 +10,41 @@
     <link rel="stylesheet" href="normalize.css">
     <!-- favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <h1>espacio para el titulo aqui</h1>
+<header class="hero">
+    <nav class="nav container"> 
+        <div class="nav-logo"> 
+            <h2>Curso C++</h2>
+        </div>
+
+        <ul class="nav-items">
+            <li class="nav-items"><a href="" class="nav-links">Inicio</a></li>
+            <li class="nav-items"><a href="" class="nav-links">Acerca de..</a></li>
+            <li class="nav-items"><a href="" class="nav-links">Contacto</a></li>
+            <li class="nav-items"><a href="" class="nav-links">Blog</a></li>
+            
+            <i class="fa-solid fa-xmark"></i> <!-- para cerrar el menu responsive-->
+        </ul>
+
+        <div class="nav-menu">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+    </nav> 
+
+    <section class="hero-container container">
+        <h1 class="hero-title">Aprende C++ desde Cero hasta ser un ninja</h1>
+        <p class="hero-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium praesentium perferendis voluptatem quod commodi, 
+        eos numquam repellat enim pariatur harum fuga recusandae 
+        ratione eaque explicabo! Minus facilis illum nisi magni.</p>
+    
+        <a href="" class="cta">Comienza Ahora</a>
+    </section>
+</header> 
+
+
+
 </body>
 </html>
