--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="normalize.css">
     <!-- favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -17,7 +17,7 @@
 <header class="hero">
     <nav class="nav container"> 
         <div class="nav-logo"> 
-            <h2>Curso C++</h2>
+            <h2 class="nav-title">Curso C++</h2>
         </div>
 
         <ul class="nav-items">
@@ -30,7 +30,7 @@
         </ul>
 
         <div class="nav-menu">
-            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars"></i> <!-- menu contraído -->
         </div>
     </nav> 
 
